--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
         <div class="row justify-content-center align-items-center min-vh-100">
           <div class="col-12 col-md-5 col-xl-4">
             <div class="animate__animated animate__fadeInDown ">
-              <div class="home-title">
+              <div class="home-title title mb-4">
                 <h1 class=" display-5">Enjoy Delicious</h1>
                 <div class="d-flex">
                   <img src="./img/home-sushi-title.png" alt="" class=" me-2">
                   <h1 class=" display-5">Sushi Food</h1>
                 </div>
               </div>
-  
-                <p class=" w-75 text-light mb-4">Enjoy a good dinner with the best dishes in 
-                  the restaurant and improve your day.</p>
-  
-                  <a href="" class=" btn btn-primary btn-icon">Order Now
-                    <i class="ri-arrow-right-line"></i>
-                  </a>
+
+              <p class=" w-75  mb-4">Enjoy a good dinner with the best dishes in
+                the restaurant and improve your day.</p>
+
+              <a href="" class=" btn btn-primary btn-icon">Order Now
+                <i class="ri-arrow-right-line"></i>
+              </a>
             </div>
           </div>
           <div class="col12 col-md-7 col-xl-6">
@@ -69,6 +69,235 @@
         </div>
       </div>
     </section>
+
+    <section id="about" class=" mb-9">
+      <div class="container">
+        <div class="row justify-content-center align-items-center ">
+          <div class="col-md-4">
+            <img src="./img/about-sushi.png" class=" d-block w-100 animate__animated animate__fadeInDown" alt="">
+          </div>
+          <div class="col-md-4 offset-1">
+            <div class="animate__animated animate__fadeInUp">
+              <div class="">
+                <h3 class="text-primary sub-title">About Us</h3>
+                <div class="home-title title mb-4">
+                  <div class="d-flex">
+                    <h1 class=" ">We Provide</h1>
+                    <img src="./img/about-sushi-title.png" alt="" class=" ms-2">
+                  </div>
+                  <h1 class=" ">Healthy Food</h1>
+                </div>
+
+                <p class="">Food comes to us from our relatives, whether they
+                  have wings or roots. This is how we consider food,
+                  it also has a culture. It has a history that passes
+                  from generation to generation.</p>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="popular" class=" mb-9">
+      <div class="container">
+        <div class="row mb-9">
+          <div class="col-12">
+            <div class=" text-center">
+              <h3 class="text-primary sub-title">The Best Food</h3>
+              <h1 class=" ">Popular Dishes</h1>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-3">
+            <div class="dish-card shadow rounded-4 p-4 pt-0">
+              <img src="./img/popular-onigiri.png" class=" w-100 d-block" alt="">
+              <div class=" text-center">
+                <p class=" h4">Onigiri</p>
+                <p>Japanese Dish</p>
+                <p class="h4 text-primary fw-bold">$10.99</p>
+              </div>
+
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="dish-card shadow rounded-4 p-4 pt-0">
+              <img src="./img/popular-spring-rols.png" class=" w-100 d-block" alt="">
+              <div class=" text-center">
+                <p class=" h4">Spring Rolls</p>
+                <p>Japanese Dish</p>
+                <p class="h4 text-primary fw-bold">$15.99</p>
+              </div>
+
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="dish-card shadow rounded-4 p-4 pt-0">
+              <img src="./img/popular-sushi-rolls.png" class=" w-100 d-block" alt="">
+              <div class=" text-center">
+                <p class=" h4">Sushi Rolls</p>
+                <p>Japanese Dish</p>
+                <p class="h4 text-primary fw-bold">$19.99</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="recent" class=" mb-9">
+      <div class="container">
+        <div class="row mb-9 justify-content-center align-items-center ">
+          <div class="col-md-4">
+            <div class="animate__animated animate__fadeInUp">
+              <div class="">
+                <h3 class="text-primary sub-title">Recently Added</h3>
+                <div class="home-title title mb-4">
+                  <div class="d-flex">
+                    <h1 class=" ">Sushi Samurai</h1>
+                    <img src="./img/spinach-leaf.png" class=" ms-2" style="transform: rotate(45deg);" alt="">
+                  </div>
+
+                  <h1>Salmón Cheese</h1>
+                </div>
+
+                <p class="">Take a look at what's new. And do not deprive
+                  yourself of a good meal, enjoy and be happy..</p>
+
+                <a href="" class=" btn btn-primary btn-icon">Order Now
+                  <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-md-5 offset-1">
+            <img src="./img/recently-salmon-sushi.png" class=" d-block w-100 animate__animated animate__fadeInDown"
+              alt="">
+          </div>
+        </div>
+        <div class="row bg-dark rounded-5 p-5 mb-9 justify-content-center align-items-center ">
+          <div class="col-md-4">
+            <img src="./img/newsletter-sushi.png" class=" d-block w-100 animate__animated animate__fadeInDown" alt="">
+          </div>
+          <div class="col-md-5 offset-1">
+            <div class="animate__animated animate__fadeInUp">
+              <div class="">
+                <h3 class="text-primary sub-title">Newsletter</h3>
+                <div class="home-title text-white title mb-4">
+                  <h1 class="mb-4">Subscribe For <br>
+                    Offer Updates</h1>
+                  <div class=" bg-white rounded-pill d-flex align-items-center g-0 ps-4 p-2">
+                    <input type="text" placeholder="Enter email"
+                      class=" form-control bg-transparent bottom-0 me-1 flex-grow-1">
+                    <button class="btn btn-primary btn-icon text-nowrap">
+                      Subscribe<i class="ri-send-plane-2-fill"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      </div>
+    </section>
+
+    <section id="footer" class="p-2">
+      <div class="container justify-content-around">
+        <div class="row justify-content-center text-center">
+          <div class="col">
+            <h6 class="fw-bold">Sushi</h6>
+            <p>Food for the body is not <br>
+              enough. There must be food <br>
+              for the soul.</p>
+          </div>
+          <div class="col">
+            <h6 class="fw-bold">Main Menu</h6>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Menus</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Offer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Events</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col">
+            <h6 class="fw-bold">Information</h6>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Order & Returns</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Videos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Reservation</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col">
+            <h6 class="fw-bold">Address</h6>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Av. Hacienda 1234<br>
+                  Lima 4321, Perú</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">9AM - 11PM</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col text-start ms-auto">
+            <h6 class="fw-bold">Social Media</h6>
+            <div class=" d-flex">
+              <a href="https://www.facebook.com/" class="text-decoration-none">
+                <i class=" ri-facebook-circle-fill ri-1x m-2 text-primary"></i>
+              </a>
+              <a href="https://www.instagram.com/" class="text-decoration-none">
+                <i class=" ri-instagram-fill ri-1x m-2 text-primary"></i>
+              </a>
+              <a href="https://twitter.com/" class="text-decoration-none">
+                <i class=" ri-twitter-fill ri-1x m-2 text-primary"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 text-black-50">
+          <div class="col">&copy; KNKK All Right Reserved</div>
+          <div class="col">
+            <ul class="footer-card">
+              <li><img src="./img/footer-card-1.png" class="w-50" alt=""></li>
+              <li><img src="./img/footer-card-2.png" class="w-50" alt=""></li>
+              <li><img src="./img/footer-card-3.png" class="w-50" alt=""></li>
+              <li><img src="./img/footer-card-4.png" class="w-50" alt=""></li>
+
+
+
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+
   </main>
 
 
